# systemd-manager-tui

./: '  .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  ]  build.sh  flake.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-property-template.md  new-property.md
assets/: systemd-manager-tui.webm
docs/: architecture.md  flakes.md  screenshots.md
src/: main.rs
src/domain/: mod.rs  service.rs  service_property.rs  service_repository.rs  service_state.rs
src/domain/service/: mod.rs  service.rs  service_repository.rs
src/infrastructure/: mod.rs  notifier.rs  systemd_service_adapter.rs
src/terminal/: app.rs  mod.rs  terminal.rs
src/terminal/components/: details.rs  filter.rs  list.rs  log.rs  mod.rs
src/terminal/details/: details.rs
src/terminal/filter/: filter.rs
src/terminal/list/: list.rs
src/usecases/: list_services.rs  mod.rs  services_manager.rs
