[package]
name = "systemd-manager-tui"
version = "1.2.4"
description = "TUI for managing systemd services"
authors = ["Matheus-git <mathiew0@gmail.com>"]
license = "MIT"
edition = "2024"
exclude = [
    "assets/*",
    "docs/*"
]
readme = "README.md"
repository = "https://github.com/matheus-git/systemd-manager-tui"
keywords = ["ratatui", "systemd", "manager", "tui"]

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true
strip = true

[dependencies]
chrono = "0.4"
zbus = "5.5.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
ratatui = "0.29"
textwrap = "0.16.2"
rayon = "1.11.0"
libc = "0.2.182"

[dev-dependencies]
logcast = "0.2.9"
log = "0.4.29"

[package.metadata.deb]
name = "systemd-manager-tui"
maintainer = "Matheus-git <mathiew0@gmail.com>"
depends = ""
license-file = "LICENSE"
copyright = "MIT @ Matheus-git"

[package.metadata.generate-rpm]
name = "systemd-manager-tui"
summary = "TUI for managing systemd services"
license = "MIT"
arch = "x86_64"

assets = [
    { source = "target/x86_64-unknown-linux-musl/release/systemd-manager-tui", dest = "/usr/bin/systemd-manager-tui", mode = "755" }
]
